--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ header nav .left{
 header nav .left>*{
     font-size: 36px;
     font-weight: bolder;
-}
+} 
+
 header nav .right{
     width: 50%;
     margin-right: 50px;
@@ -158,4 +159,17 @@ footer .foot .bottom button{
 }
 #branching{
     padding: 10px;
+}
+.linkedin{
+    color: rgb(0, 119, 180);
+    
+}
+.twitter{
+    color: rgb(29, 161, 243);
+}
+.whatsapp{
+    color: rgb(41, 208, 69);
+}
+.instagram{
+    color: rgb(247, 2, 168);
 }
